y.output
   0  $accept : translation_unit $end

   1  primary_expression : IDENTIFIER
   2                     | constant
   3                     | STRING_LITERAL
   4                     | ROBRAOPEN expression ROBRACLOSE

   5  constant : INTEGER_CONSTANT
   6           | FLOATING_CONSTANT
   7           | ENUMERATION_CONSTANT
   8           | CHARACTER_CONSTANT

   9  postfix_expression : primary_expression
  10                     | postfix_expression SQBRAOPEN expression SQBRACLOSE
  11                     | postfix_expression ROBRAOPEN ROBRACLOSE
  12                     | postfix_expression ROBRAOPEN argument_expression_list ROBRACLOSE
  13                     | postfix_expression DOT IDENTIFIER
  14                     | postfix_expression ACC IDENTIFIER
  15                     | postfix_expression INC
  16                     | postfix_expression DEC
  17                     | ROBRAOPEN type_name ROBRACLOSE CURBRAOPEN initializer_list CURBRACLOSE
  18                     | ROBRAOPEN type_name ROBRACLOSE CURBRAOPEN initializer_list COMMA CURBRACLOSE

  19  argument_expression_list : assignment_expression
  20                           | argument_expression_list COMMA assignment_expression

  21  unary_expression : postfix_expression
  22                   | INC unary_expression
  23                   | DEC unary_expression
  24                   | unary_operator cast_expression
  25                   | SIZEOF unary_expression
  26                   | SIZEOF ROBRAOPEN type_name ROBRACLOSE

  27  unary_operator : AMP
  28                 | MUL
  29                 | ADD
  30                 | SUB
  31                 | NEG
  32                 | EXCLAIM

  33  cast_expression : unary_expression
  34                  | ROBRAOPEN type_name ROBRACLOSE cast_expression

  35  multiplicative_expression : cast_expression
  36                            | multiplicative_expression MUL cast_expression
  37                            | multiplicative_expression DIV cast_expression
  38                            | multiplicative_expression MODULO cast_expression

  39  additive_expression : multiplicative_expression
  40                      | additive_expression ADD multiplicative_expression
  41                      | additive_expression SUB multiplicative_expression

  42  shift_expression : additive_expression
  43                   | shift_expression SHL additive_expression
  44                   | shift_expression SHR additive_expression

  45  relational_expression : shift_expression
  46                        | relational_expression BITSHL shift_expression
  47                        | relational_expression BITSHR shift_expression
  48                        | relational_expression LTE shift_expression
  49                        | relational_expression GTE shift_expression

  50  equality_expression : relational_expression
  51                      | equality_expression EQ relational_expression
  52                      | equality_expression NEQ relational_expression

  53  AND_expression : equality_expression
  54                 | AND_expression AMP equality_expression

  55  exclusive_OR_expression : AND_expression
  56                          | exclusive_OR_expression BITXOR AND_expression

  57  inclusive_OR_expression : exclusive_OR_expression
  58                          | inclusive_OR_expression BITOR exclusive_OR_expression

  59  logical_AND_expression : inclusive_OR_expression
  60                         | logical_AND_expression NLabel AND MLabel inclusive_OR_expression

  61  logical_OR_expression : logical_AND_expression
  62                        | logical_OR_expression NLabel OR MLabel logical_AND_expression

  63  MLabel :

  64  NLabel :

  65  conditional_expression : logical_OR_expression
  66                         | logical_OR_expression NLabel QUESTION MLabel expression NLabel COLON MLabel conditional_expression

  67  assignment_expression : conditional_expression
  68                        | unary_expression assignment_operator assignment_expression

  69  assignment_operator : ASSIGN
  70                      | STAREQ
  71                      | DIVEQ
  72                      | MODEQ
  73                      | PLUSEQ
  74                      | MINUSEQ
  75                      | SHLEQ
  76                      | SHREQ
  77                      | BINANDEQ
  78                      | BINXOREQ
  79                      | BINOREQ

  80  expression : assignment_expression
  81             | expression COMMA assignment_expression

  82  constant_expression : conditional_expression

  83  declaration : declaration_specifiers init_declarator_list SEMICOLON
  84              | declaration_specifiers SEMICOLON

  85  declaration_specifiers : storage_class_specifier declaration_specifiers
  86                         | storage_class_specifier
  87                         | type_specifier declaration_specifiers
  88                         | type_specifier
  89                         | type_qualifier declaration_specifiers
  90                         | type_qualifier
  91                         | function_specifier declaration_specifiers
  92                         | function_specifier

  93  init_declarator_list : init_declarator
  94                       | init_declarator_list COMMA init_declarator

  95  init_declarator : declarator
  96                  | declarator ASSIGN initializer

  97  storage_class_specifier : EXTERN
  98                          | STATIC
  99                          | AUTO
 100                          | REGISTER

 101  type_specifier : VOID
 102                 | CHAR
 103                 | SHORT
 104                 | INT
 105                 | LONG
 106                 | FLOAT
 107                 | DOUBLE
 108                 | SIGNED
 109                 | UNSIGNED
 110                 | BOOL
 111                 | COMPLEX
 112                 | IMAGINARY
 113                 | enum_specifier

 114  specifier_qualifier_list : type_specifier specifier_qualifier_list
 115                           | type_specifier
 116                           | type_qualifier specifier_qualifier_list
 117                           | type_qualifier

 118  enum_specifier : ENUM IDENTIFIER CURBRAOPEN enumerator_list CURBRACLOSE
 119                 | ENUM CURBRAOPEN enumerator_list CURBRACLOSE
 120                 | ENUM IDENTIFIER CURBRAOPEN enumerator_list COMMA CURBRACLOSE
 121                 | ENUM CURBRAOPEN enumerator_list COMMA CURBRACLOSE
 122                 | ENUM IDENTIFIER

 123  enumerator_list : enumerator
 124                  | enumerator_list COMMA enumerator

 125  enumerator : IDENTIFIER
 126             | IDENTIFIER ASSIGN constant_expression

 127  type_qualifier : CONST
 128                 | RESTRICT
 129                 | VOLATILE

 130  function_specifier : INLINE

 131  declarator : pointer direct_declarator
 132             | direct_declarator

 133  direct_declarator : IDENTIFIER
 134                    | ROBRAOPEN declarator ROBRACLOSE
 135                    | direct_declarator SQBRAOPEN type_qualifier_list assignment_expression SQBRACLOSE
 136                    | direct_declarator SQBRAOPEN type_qualifier_list SQBRACLOSE
 137                    | direct_declarator SQBRAOPEN assignment_expression SQBRACLOSE
 138                    | direct_declarator SQBRAOPEN SQBRACLOSE
 139                    | direct_declarator SQBRAOPEN STATIC type_qualifier_list assignment_expression SQBRACLOSE
 140                    | direct_declarator SQBRAOPEN STATIC assignment_expression SQBRACLOSE
 141                    | direct_declarator SQBRAOPEN type_qualifier_list MUL SQBRACLOSE
 142                    | direct_declarator SQBRAOPEN MUL SQBRACLOSE
 143                    | direct_declarator ROBRAOPEN CT parameter_type_list ROBRACLOSE
 144                    | direct_declarator ROBRAOPEN identifier_list ROBRACLOSE
 145                    | direct_declarator ROBRAOPEN CT ROBRACLOSE

 146  CT :

 147  pointer : MUL type_qualifier_list
 148          | MUL
 149          | MUL type_qualifier_list pointer
 150          | MUL pointer

 151  type_qualifier_list : type_qualifier
 152                      | type_qualifier_list type_qualifier

 153  parameter_type_list : parameter_list
 154                      | parameter_list COMMA DOTS

 155  parameter_list : parameter_declaration
 156                 | parameter_list COMMA parameter_declaration

 157  parameter_declaration : declaration_specifiers declarator
 158                        | declaration_specifiers

 159  identifier_list : IDENTIFIER
 160                  | identifier_list COMMA IDENTIFIER

 161  type_name : specifier_qualifier_list

 162  initializer : assignment_expression
 163              | CURBRAOPEN initializer_list CURBRACLOSE
 164              | CURBRAOPEN initializer_list COMMA CURBRACLOSE

 165  initializer_list : designation initializer
 166                   | initializer
 167                   | initializer_list COMMA designation initializer
 168                   | initializer_list COMMA initializer

 169  designation : designator_list ASSIGN

 170  designator_list : designator
 171                  | designator_list designator

 172  designator : SQBRAOPEN constant_expression SQBRACLOSE
 173             | DOT IDENTIFIER

 174  statement : labeled_statement
 175            | compound_statement
 176            | expression_statement
 177            | selection_statement
 178            | iteration_statement
 179            | jump_statement

 180  labeled_statement : IDENTIFIER COLON statement
 181                    | CASE constant_expression COLON statement
 182                    | DEFAULT COLON statement

 183  compound_statement : CURBRAOPEN block_item_list CURBRACLOSE
 184                     | CURBRAOPEN CURBRACLOSE

 185  block_item_list : block_item
 186                  | block_item_list MLabel block_item

 187  block_item : declaration
 188             | statement

 189  expression_statement : expression SEMICOLON
 190                       | SEMICOLON

 191  selection_statement : IF ROBRAOPEN expression NLabel ROBRACLOSE MLabel statement NLabel
 192                      | IF ROBRAOPEN expression NLabel ROBRACLOSE MLabel statement NLabel ELSE MLabel statement
 193                      | SWITCH ROBRAOPEN expression ROBRACLOSE statement

 194  iteration_statement : WHILE MLabel ROBRAOPEN expression ROBRACLOSE MLabel statement
 195                      | DO MLabel statement MLabel WHILE ROBRAOPEN expression ROBRACLOSE SEMICOLON
 196                      | FOR ROBRAOPEN expression_statement MLabel expression_statement ROBRACLOSE MLabel statement
 197                      | FOR ROBRAOPEN expression_statement MLabel expression_statement MLabel expression NLabel ROBRACLOSE MLabel statement

 198  jump_statement : GOTO IDENTIFIER SEMICOLON
 199                 | CONTINUE SEMICOLON
 200                 | BREAK SEMICOLON
 201                 | RETURN expression SEMICOLON
 202                 | RETURN SEMICOLON

 203  translation_unit : external_declaration
 204                   | translation_unit external_declaration

 205  external_declaration : function_definition
 206                       | declaration

 207  function_definition : declaration_specifiers declarator declaration_list CT compound_statement
 208                      | declaration_specifiers declarator CT compound_statement

 209  declaration_list : declaration
 210                   | declaration_list declaration

state 0
	$accept : . translation_unit $end  (0)

	AUTO  shift 1
	ENUM  shift 2
	RESTRICT  shift 3
	UNSIGNED  shift 4
	EXTERN  shift 5
	VOID  shift 6
	FLOAT  shift 7
	SHORT  shift 8
	VOLATILE  shift 9
	CHAR  shift 10
	SIGNED  shift 11
	CONST  shift 12
	BOOL  shift 13
	STATIC  shift 14
	COMPLEX  shift 15
	INLINE  shift 16
	IMAGINARY  shift 17
	INT  shift 18
	DOUBLE  shift 19
	LONG  shift 20
	REGISTER  shift 21
	.  error

	translation_unit  goto 22
	declaration  goto 23
	declaration_specifiers  goto 24
	storage_class_specifier  goto 25
	type_specifier  goto 26
	type_qualifier  goto 27
	function_specifier  goto 28
	enum_specifier  goto 29
	external_declaration  goto 30
	function_definition  goto 31


state 1
	storage_class_specifier : AUTO .  (99)

	.  reduce 99


state 2
	enum_specifier : ENUM . IDENTIFIER CURBRAOPEN enumerator_list CURBRACLOSE  (118)
	enum_specifier : ENUM . CURBRAOPEN enumerator_list CURBRACLOSE  (119)
	enum_specifier : ENUM . IDENTIFIER CURBRAOPEN enumerator_list COMMA CURBRACLOSE  (120)
	enum_specifier : ENUM . CURBRAOPEN enumerator_list COMMA CURBRACLOSE  (121)
	enum_specifier : ENUM . IDENTIFIER  (122)

	IDENTIFIER  shift 32
	CURBRAOPEN  shift 33
	.  error


state 3
	type_qualifier : RESTRICT .  (128)

	.  reduce 128


state 4
	type_specifier : UNSIGNED .  (109)

	.  reduce 109


state 5
	storage_class_specifier : EXTERN .  (97)

	.  reduce 97


state 6
	type_specifier : VOID .  (101)

	.  reduce 101


state 7
	type_specifier : FLOAT .  (106)

	.  reduce 106


state 8
	type_specifier : SHORT .  (103)

	.  reduce 103


state 9
	type_qualifier : VOLATILE .  (129)

	.  reduce 129


state 10
	type_specifier : CHAR .  (102)

	.  reduce 102


state 11
	type_specifier : SIGNED .  (108)

	.  reduce 108


state 12
	type_qualifier : CONST .  (127)

	.  reduce 127


state 13
	type_specifier : BOOL .  (110)

	.  reduce 110


state 14
	storage_class_specifier : STATIC .  (98)

	.  reduce 98


state 15
	type_specifier : COMPLEX .  (111)

	.  reduce 111


state 16
	function_specifier : INLINE .  (130)

	.  reduce 130


state 17
	type_specifier : IMAGINARY .  (112)

	.  reduce 112


state 18
	type_specifier : INT .  (104)

	.  reduce 104


state 19
	type_specifier : DOUBLE .  (107)

	.  reduce 107


state 20
	type_specifier : LONG .  (105)

	.  reduce 105


state 21
	storage_class_specifier : REGISTER .  (100)

	.  reduce 100


state 22
	$accept : translation_unit . $end  (0)
	translation_unit : translation_unit . external_declaration  (204)

	$end  accept
	AUTO  shift 1
	ENUM  shift 2
	RESTRICT  shift 3
	UNSIGNED  shift 4
	EXTERN  shift 5
	VOID  shift 6
	FLOAT  shift 7
	SHORT  shift 8
	VOLATILE  shift 9
	CHAR  shift 10
	SIGNED  shift 11
	CONST  shift 12
	BOOL  shift 13
	STATIC  shift 14
	COMPLEX  shift 15
	INLINE  shift 16
	IMAGINARY  shift 17
	INT  shift 18
	DOUBLE  shift 19
	LONG  shift 20
	REGISTER  shift 21
	.  error

	declaration  goto 23
	declaration_specifiers  goto 24
	storage_class_specifier  goto 25
	type_specifier  goto 26
	type_qualifier  goto 27
	function_specifier  goto 28
	enum_specifier  goto 29
	external_declaration  goto 34
	function_definition  goto 31


state 23
	external_declaration : declaration .  (206)

	.  reduce 206


state 24
	declaration : declaration_specifiers . init_declarator_list SEMICOLON  (83)
	declaration : declaration_specifiers . SEMICOLON  (84)
	function_definition : declaration_specifiers . declarator declaration_list CT compound_statement  (207)
	function_definition : declaration_specifiers . declarator CT compound_statement  (208)

	IDENTIFIER  shift 35
	ROBRAOPEN  shift 36
	MUL  shift 37
	SEMICOLON  shift 38
	.  error

	direct_declarator  goto 39
	init_declarator  goto 40
	declarator  goto 41
	pointer  goto 42
	init_declarator_list  goto 43


state 25
	declaration_specifiers : storage_class_specifier . declaration_specifiers  (85)
	declaration_specifiers : storage_class_specifier .  (86)

	AUTO  shift 1
	ENUM  shift 2
	RESTRICT  shift 3
	UNSIGNED  shift 4
	EXTERN  shift 5
	VOID  shift 6
	FLOAT  shift 7
	SHORT  shift 8
	VOLATILE  shift 9
	CHAR  shift 10
	SIGNED  shift 11
	CONST  shift 12
	BOOL  shift 13
	STATIC  shift 14
	COMPLEX  shift 15
	INLINE  shift 16
	IMAGINARY  shift 17
	INT  shift 18
	DOUBLE  shift 19
	LONG  shift 20
	REGISTER  shift 21
	IDENTIFIER  reduce 86
	ROBRAOPEN  reduce 86
	ROBRACLOSE  reduce 86
	MUL  reduce 86
	SEMICOLON  reduce 86
	COMMA  reduce 86

	declaration_specifiers  goto 44
	storage_class_specifier  goto 25
	type_specifier  goto 26
	type_qualifier  goto 27
	function_specifier  goto 28
	enum_specifier  goto 29


state 26
	declaration_specifiers : type_specifier . declaration_specifiers  (87)
	declaration_specifiers : type_specifier .  (88)

	AUTO  shift 1
	ENUM  shift 2
	RESTRICT  shift 3
	UNSIGNED  shift 4
	EXTERN  shift 5
	VOID  shift 6
	FLOAT  shift 7
	SHORT  shift 8
	VOLATILE  shift 9
	CHAR  shift 10
	SIGNED  shift 11
	CONST  shift 12
	BOOL  shift 13
	STATIC  shift 14
	COMPLEX  shift 15
	INLINE  shift 16
	IMAGINARY  shift 17
	INT  shift 18
	DOUBLE  shift 19
	LONG  shift 20
	REGISTER  shift 21
	IDENTIFIER  reduce 88
	ROBRAOPEN  reduce 88
	ROBRACLOSE  reduce 88
	MUL  reduce 88
	SEMICOLON  reduce 88
	COMMA  reduce 88

	declaration_specifiers  goto 45
	storage_class_specifier  goto 25
	type_specifier  goto 26
	type_qualifier  goto 27
	function_specifier  goto 28
	enum_specifier  goto 29


state 27
	declaration_specifiers : type_qualifier . declaration_specifiers  (89)
	declaration_specifiers : type_qualifier .  (90)

	AUTO  shift 1
	ENUM  shift 2
	RESTRICT  shift 3
	UNSIGNED  shift 4
	EXTERN  shift 5
	VOID  shift 6
	FLOAT  shift 7
	SHORT  shift 8
	VOLATILE  shift 9
	CHAR  shift 10
	SIGNED  shift 11
	CONST  shift 12
	BOOL  shift 13
	STATIC  shift 14
	COMPLEX  shift 15
	INLINE  shift 16
	IMAGINARY  shift 17
	INT  shift 18
	DOUBLE  shift 19
	LONG  shift 20
	REGISTER  shift 21
	IDENTIFIER  reduce 90
	ROBRAOPEN  reduce 90
	ROBRACLOSE  reduce 90
	MUL  reduce 90
	SEMICOLON  reduce 90
	COMMA  reduce 90

	declaration_specifiers  goto 46
	storage_class_specifier  goto 25
	type_specifier  goto 26
	type_qualifier  goto 27
	function_specifier  goto 28
	enum_specifier  goto 29


state 28
	declaration_specifiers : function_specifier . declaration_specifiers  (91)
	declaration_specifiers : function_specifier .  (92)

	AUTO  shift 1
	ENUM  shift 2
	RESTRICT  shift 3
	UNSIGNED  shift 4
	EXTERN  shift 5
	VOID  shift 6
	FLOAT  shift 7
	SHORT  shift 8
	VOLATILE  shift 9
	CHAR  shift 10
	SIGNED  shift 11
	CONST  shift 12
	BOOL  shift 13
	STATIC  shift 14
	COMPLEX  shift 15
	INLINE  shift 16
	IMAGINARY  shift 17
	INT  shift 18
	DOUBLE  shift 19
	LONG  shift 20
	REGISTER  shift 21
	IDENTIFIER  reduce 92
	ROBRAOPEN  reduce 92
	ROBRACLOSE  reduce 92
	MUL  reduce 92
	SEMICOLON  reduce 92
	COMMA  reduce 92

	declaration_specifiers  goto 47
	storage_class_specifier  goto 25
	type_specifier  goto 26
	type_qualifier  goto 27
	function_specifier  goto 28
	enum_specifier  goto 29


state 29
	type_specifier : enum_specifier .  (113)

	.  reduce 113


state 30
	translation_unit : external_declaration .  (203)

	.  reduce 203


state 31
	external_declaration : function_definition .  (205)

	.  reduce 205


state 32
	enum_specifier : ENUM IDENTIFIER . CURBRAOPEN enumerator_list CURBRACLOSE  (118)
	enum_specifier : ENUM IDENTIFIER . CURBRAOPEN enumerator_list COMMA CURBRACLOSE  (120)
	enum_specifier : ENUM IDENTIFIER .  (122)

	CURBRAOPEN  shift 48
	AUTO  reduce 122
	ENUM  reduce 122
	RESTRICT  reduce 122
	UNSIGNED  reduce 122
	EXTERN  reduce 122
	VOID  reduce 122
	FLOAT  reduce 122
	SHORT  reduce 122
	VOLATILE  reduce 122
	CHAR  reduce 122
	SIGNED  reduce 122
	CONST  reduce 122
	BOOL  reduce 122
	STATIC  reduce 122
	COMPLEX  reduce 122
	INLINE  reduce 122
	IMAGINARY  reduce 122
	INT  reduce 122
	DOUBLE  reduce 122
	LONG  reduce 122
	REGISTER  reduce 122
	IDENTIFIER  reduce 122
	ROBRAOPEN  reduce 122
	ROBRACLOSE  reduce 122
	MUL  reduce 122
	SEMICOLON  reduce 122
	COMMA  reduce 122


state 33
	enum_specifier : ENUM CURBRAOPEN . enumerator_list CURBRACLOSE  (119)
	enum_specifier : ENUM CURBRAOPEN . enumerator_list COMMA CURBRACLOSE  (121)

	IDENTIFIER  shift 49
	.  error

	enumerator_list  goto 50
	enumerator  goto 51


state 34
	translation_unit : translation_unit external_declaration .  (204)

	.  reduce 204


state 35
	direct_declarator : IDENTIFIER .  (133)

	.  reduce 133


state 36
	direct_declarator : ROBRAOPEN . declarator ROBRACLOSE  (134)

	IDENTIFIER  shift 35
	ROBRAOPEN  shift 36
	MUL  shift 37
	.  error

	direct_declarator  goto 39
	declarator  goto 52
	pointer  goto 42


state 37
	pointer : MUL . type_qualifier_list  (147)
	pointer : MUL .  (148)
	pointer : MUL . type_qualifier_list pointer  (149)
	pointer : MUL . pointer  (150)

	RESTRICT  shift 3
	VOLATILE  shift 9
	CONST  shift 12
	MUL  shift 37
	IDENTIFIER  reduce 148
	ROBRAOPEN  reduce 148

	pointer  goto 53
	type_qualifier  goto 54
	type_qualifier_list  goto 55


state 38
	declaration : declaration_specifiers SEMICOLON .  (84)

	.  reduce 84


state 39
	declarator : direct_declarator .  (132)
	direct_declarator : direct_declarator . SQBRAOPEN type_qualifier_list assignment_expression SQBRACLOSE  (135)
	direct_declarator : direct_declarator . SQBRAOPEN type_qualifier_list SQBRACLOSE  (136)
	direct_declarator : direct_declarator . SQBRAOPEN assignment_expression SQBRACLOSE  (137)
	direct_declarator : direct_declarator . SQBRAOPEN SQBRACLOSE  (138)
	direct_declarator : direct_declarator . SQBRAOPEN STATIC type_qualifier_list assignment_expression SQBRACLOSE  (139)
	direct_declarator : direct_declarator . SQBRAOPEN STATIC assignment_expression SQBRACLOSE  (140)
	direct_declarator : direct_declarator . SQBRAOPEN type_qualifier_list MUL SQBRACLOSE  (141)
	direct_declarator : direct_declarator . SQBRAOPEN MUL SQBRACLOSE  (142)
	direct_declarator : direct_declarator . ROBRAOPEN CT parameter_type_list ROBRACLOSE  (143)
	direct_declarator : direct_declarator . ROBRAOPEN identifier_list ROBRACLOSE  (144)
	direct_declarator : direct_declarator . ROBRAOPEN CT ROBRACLOSE  (145)

	SQBRAOPEN  shift 56
	ROBRAOPEN  shift 57
	AUTO  reduce 132
	ENUM  reduce 132
	RESTRICT  reduce 132
	UNSIGNED  reduce 132
	EXTERN  reduce 132
	VOID  reduce 132
	FLOAT  reduce 132
	SHORT  reduce 132
	VOLATILE  reduce 132
	CHAR  reduce 132
	SIGNED  reduce 132
	CONST  reduce 132
	BOOL  reduce 132
	STATIC  reduce 132
	COMPLEX  reduce 132
	INLINE  reduce 132
	IMAGINARY  reduce 132
	INT  reduce 132
	DOUBLE  reduce 132
	LONG  reduce 132
	REGISTER  reduce 132
	ROBRACLOSE  reduce 132
	CURBRAOPEN  reduce 132
	SEMICOLON  reduce 132
	ASSIGN  reduce 132
	COMMA  reduce 132


state 40
	init_declarator_list : init_declarator .  (93)

	.  reduce 93


state 41
	init_declarator : declarator .  (95)
	init_declarator : declarator . ASSIGN initializer  (96)
	function_definition : declaration_specifiers declarator . declaration_list CT compound_statement  (207)
	function_definition : declaration_specifiers declarator . CT compound_statement  (208)
	CT : .  (146)

	AUTO  shift 1
	ENUM  shift 2
	RESTRICT  shift 3
	UNSIGNED  shift 4
	EXTERN  shift 5
	VOID  shift 6
	FLOAT  shift 7
	SHORT  shift 8
	VOLATILE  shift 9
	CHAR  shift 10
	SIGNED  shift 11
	CONST  shift 12
	BOOL  shift 13
	STATIC  shift 14
	COMPLEX  shift 15
	INLINE  shift 16
	IMAGINARY  shift 17
	INT  shift 18
	DOUBLE  shift 19
	LONG  shift 20
	REGISTER  shift 21
	ASSIGN  shift 58
	CURBRAOPEN  reduce 146
	SEMICOLON  reduce 95
	COMMA  reduce 95

	declaration  goto 59
	declaration_specifiers  goto 60
	storage_class_specifier  goto 25
	type_specifier  goto 26
	type_qualifier  goto 27
	function_specifier  goto 28
	enum_specifier  goto 29
	CT  goto 61
	declaration_list  goto 62


state 42
	declarator : pointer . direct_declarator  (131)

	IDENTIFIER  shift 35
	ROBRAOPEN  shift 36
	.  error

	direct_declarator  goto 63


state 43
	declaration : declaration_specifiers init_declarator_list . SEMICOLON  (83)
	init_declarator_list : init_declarator_list . COMMA init_declarator  (94)

	SEMICOLON  shift 64
	COMMA  shift 65
	.  error


state 44
	declaration_specifiers : storage_class_specifier declaration_specifiers .  (85)

	.  reduce 85


state 45
	declaration_specifiers : type_specifier declaration_specifiers .  (87)

	.  reduce 87


state 46
	declaration_specifiers : type_qualifier declaration_specifiers .  (89)

	.  reduce 89


state 47
	declaration_specifiers : function_specifier declaration_specifiers .  (91)

	.  reduce 91


state 48
	enum_specifier : ENUM IDENTIFIER CURBRAOPEN . enumerator_list CURBRACLOSE  (118)
	enum_specifier : ENUM IDENTIFIER CURBRAOPEN . enumerator_list COMMA CURBRACLOSE  (120)

	IDENTIFIER  shift 49
	.  error

	enumerator_list  goto 66
	enumerator  goto 51


state 49
	enumerator : IDENTIFIER .  (125)
	enumerator : IDENTIFIER . ASSIGN constant_expression  (126)

	ASSIGN  shift 67
	CURBRACLOSE  reduce 125
	COMMA  reduce 125


state 50
	enum_specifier : ENUM CURBRAOPEN enumerator_list . CURBRACLOSE  (119)
	enum_specifier : ENUM CURBRAOPEN enumerator_list . COMMA CURBRACLOSE  (121)
	enumerator_list : enumerator_list . COMMA enumerator  (124)

	CURBRACLOSE  shift 68
	COMMA  shift 69
	.  error


state 51
	enumerator_list : enumerator .  (123)

	.  reduce 123


state 52
	direct_declarator : ROBRAOPEN declarator . ROBRACLOSE  (134)

	ROBRACLOSE  shift 70
	.  error


state 53
	pointer : MUL pointer .  (150)

	.  reduce 150


state 54
	type_qualifier_list : type_qualifier .  (151)

	.  reduce 151


state 55
	pointer : MUL type_qualifier_list .  (147)
	pointer : MUL type_qualifier_list . pointer  (149)
	type_qualifier_list : type_qualifier_list . type_qualifier  (152)

	RESTRICT  shift 3
	VOLATILE  shift 9
	CONST  shift 12
	MUL  shift 37
	IDENTIFIER  reduce 147
	ROBRAOPEN  reduce 147

	pointer  goto 71
	type_qualifier  goto 72


state 56
	direct_declarator : direct_declarator SQBRAOPEN . type_qualifier_list assignment_expression SQBRACLOSE  (135)
	direct_declarator : direct_declarator SQBRAOPEN . type_qualifier_list SQBRACLOSE  (136)
	direct_declarator : direct_declarator SQBRAOPEN . assignment_expression SQBRACLOSE  (137)
	direct_declarator : direct_declarator SQBRAOPEN . SQBRACLOSE  (138)
	direct_declarator : direct_declarator SQBRAOPEN . STATIC type_qualifier_list assignment_expression SQBRACLOSE  (139)
	direct_declarator : direct_declarator SQBRAOPEN . STATIC assignment_expression SQBRACLOSE  (140)
	direct_declarator : direct_declarator SQBRAOPEN . type_qualifier_list MUL SQBRACLOSE  (141)
	direct_declarator : direct_declarator SQBRAOPEN . MUL SQBRACLOSE  (142)

	RESTRICT  shift 3
	VOLATILE  shift 9
	CONST  shift 12
	SIZEOF  shift 73
	STATIC  shift 74
	IDENTIFIER  shift 75
	INTEGER_CONSTANT  shift 76
	FLOATING_CONSTANT  shift 77
	CHARACTER_CONSTANT  shift 78
	ENUMERATION_CONSTANT  shift 79
	STRING_LITERAL  shift 80
	SQBRACLOSE  shift 81
	ROBRAOPEN  shift 82
	INC  shift 83
	DEC  shift 84
	AMP  shift 85
	MUL  shift 86
	ADD  shift 87
	SUB  shift 88
	NEG  shift 89
	EXCLAIM  shift 90
	.  error

	primary_expression  goto 91
	multiplicative_expression  goto 92
	additive_expression  goto 93
	shift_expression  goto 94
	relational_expression  goto 95
	equality_expression  goto 96
	AND_expression  goto 97
	exclusive_OR_expression  goto 98
	inclusive_OR_expression  goto 99
	logical_AND_expression  goto 100
	logical_OR_expression  goto 101
	conditional_expression  goto 102
	assignment_expression  goto 103
	postfix_expression  goto 104
	unary_expression  goto 105
	cast_expression  goto 106
	unary_operator  goto 107
	constant  goto 108
	type_qualifier  goto 54
	type_qualifier_list  goto 109


state 57
	direct_declarator : direct_declarator ROBRAOPEN . CT parameter_type_list ROBRACLOSE  (143)
	direct_declarator : direct_declarator ROBRAOPEN . identifier_list ROBRACLOSE  (144)
	direct_declarator : direct_declarator ROBRAOPEN . CT ROBRACLOSE  (145)
	CT : .  (146)

	IDENTIFIER  shift 110
	AUTO  reduce 146
	ENUM  reduce 146
	RESTRICT  reduce 146
	UNSIGNED  reduce 146
	EXTERN  reduce 146
	VOID  reduce 146
	FLOAT  reduce 146
	SHORT  reduce 146
	VOLATILE  reduce 146
	CHAR  reduce 146
	SIGNED  reduce 146
	CONST  reduce 146
	BOOL  reduce 146
	STATIC  reduce 146
	COMPLEX  reduce 146
	INLINE  reduce 146
	IMAGINARY  reduce 146
	INT  reduce 146
	DOUBLE  reduce 146
	LONG  reduce 146
	REGISTER  reduce 146
	ROBRACLOSE  reduce 146

	CT  goto 111
	identifier_list  goto 112


state 58
	init_declarator : declarator ASSIGN . initializer  (96)

	SIZEOF  shift 73
	IDENTIFIER  shift 75
	INTEGER_CONSTANT  shift 76
	FLOATING_CONSTANT  shift 77
	CHARACTER_CONSTANT  shift 78
	ENUMERATION_CONSTANT  shift 79
	STRING_LITERAL  shift 80
	ROBRAOPEN  shift 82
	CURBRAOPEN  shift 113
	INC  shift 83
	DEC  shift 84
	AMP  shift 85
	MUL  shift 114
	ADD  shift 87
	SUB  shift 88
	NEG  shift 89
	EXCLAIM  shift 90
	.  error

	primary_expression  goto 91
	multiplicative_expression  goto 92
	additive_expression  goto 93
	shift_expression  goto 94
	relational_expression  goto 95
	equality_expression  goto 96
	AND_expression  goto 97
	exclusive_OR_expression  goto 98
	inclusive_OR_expression  goto 99
	logical_AND_expression  goto 100
	logical_OR_expression  goto 101
	conditional_expression  goto 102
	assignment_expression  goto 115
	postfix_expression  goto 104
	unary_expression  goto 105
	cast_expression  goto 106
	unary_operator  goto 107
	constant  goto 108
	initializer  goto 116


state 59
	declaration_list : declaration .  (209)

	.  reduce 209

